# Generative-AI-With-Python-practise

./: .env  .gitignore  README.md  README.zh-CN.md  exmaple.env  main.py  pyproject.toml  story.md
.github/: copilot-instructions.md
.trae/rules/: project_rules.md
02_pretrained_model/: NER.py  text_to_audio.ipynb  text_to_image.ipynb  text_to_image.py  zero_shot_classification.ipynb
03_large_language_model/: chat_with_openai.py  groq_gpt.ipynb  localizing_llm.py  parallel_chain.py  router_chain.py  simple_chain.py
04_prompt_engineering/: large_rating_small.py  self_consistency.py  self_feedback.py
05_vector_databases/chunking/: embeddings_util.py  sematic_chunking.py  structed_chunking.py
05_vector_databases/data_loder/: load_directory.py  wikipedia_loder.py
c02_pretrained_model/: QA.py  capstone.py  fill_mask.ipynb  fill_mask.py  summarization.py  text_to_audio.py  translation_zh_cn.py  zero_shot_classification.py
c03_large_language_model/: chain_game.py  groq_gpt.ipynb  groq_gpt.py  image_analyzing.py  llama_guard.py  llm_stay_on_topic.py  localizing_llm.py  prompt_hub.py  router_chain.py  simple_chain.py  working_with_groq.py
c04_prompt_engineering/: few-shot.py  prompt_chaining.py  self_consistency.py
c05_vector_databases/capstone_project/: app.py  data_prep.py
c05_vector_databases/capstone_project/db/62c9530f-ec3c-4114-ac1b-e5169e38faf9/: index_metadata.pickle
c05_vector_databases/capstone_project/db/b5ef090c-63eb-47ec-a9c0-7e40dd083776/: index_metadata.pickle
c05_vector_databases/chunking/: __init__.py  custom_chunking.py  custom_chunking_utils.py  embeddings_util.py  fixed_size.py  sematic_chunking.py
c05_vector_databases/data_loder/: gutenberg_loader.py  txt_file.py
c05_vector_databases/data_store/: chroma_database.py  data_prep.py  web_store.py
c05_vector_databases/embedding/: embedding_with_langchain.py  sentence_embedding.py  word2vec_similaity.py
c05_vector_databases/retrieve_data/: chroma_retrieval.py  pinecone_retrieval.py
c06_RAG/: BM25_TFIDF.py  BM25_TFIDF_zh.py  anthropic_caching.py  hybrid_search.py  query_expansion.py  rag_evaluate.py  simple_RAG.py
c06_RAG/rag_store/57148bd9-4b02-4de0-a822-25ea18c73817/: index_metadata.pickle
c07_agentic_system/: agentic_rag.py  openai_simple_agent.py  pydantic_demo.py  react.py
c07_agentic_system/ag2/: ag2_conversation.py  agentops_ag2.py  human_in_the_loop.py  tools_for_ag2.py
c07_agentic_system/langraph/: graph_router.py  langgraph_tools.py  simple_graph.py
c07_agentic_system/pydantic_ai/: pydantic_logfire.py
miscellany/: agent_write_md.py
tests/: test_custom_chunking.py  test_custom_chunking_utils.py
tests/c05_vector_databases/capstone_project/: test_data_prep.py
tests/c05_vector_databases/chunking/: test_custom_chunking_utils.py
tests/c05_vector_databases/data_store/: test_data_prep.py
